# yare-rust-template

./: .eslintignore  .gitignore  .gitmodules  Cargo.toml  Cargo.toml.d.ts  README.md  package.json  rollup.config.js  tsconfig.json
helpers/: build.js  textcoders.js  textdecoder.js
src/: lib.rs
tests/: app.rs
ts/: index.ts
