# You must change these to your own details.
[package]
name = "yareio-rust-template"
version = "0.1.0"
authors = ["You <you@example.com>"]
edition = "2018"
description = "Template for building a Yare.io bot with Rust and TypeScript."
readme = "README.md"
keywords = ["yare.io", "yareio"]
categories = ["wasm", "games"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3 # set to 's' for smaller bundle size (but slower execution)

[features]
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
# If you uncomment this line, it will enable `wee_alloc`
# You will also have to uncomment `wee_alloc` in dependencies below
#default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.74"
js-sys = "0.3.51"
yareio-sys = { git = "https://github.com/Jules-Bertholet/yareio-rs" }

# Uncomment next line to include wee-alloc
#wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = { git = "https://github.com/Jules-Bertholet/console_log_panic_hook" }
